--- a/Mojo_jojo.ipynb
+++ b/Mojo_jojo.ipynb
@@ -20,12 +20,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "24f5b00e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello bellota\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"hello bellota\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02ae15d8",
+   "metadata": {},
+   "source": [
+    "frjcehcercvevcecevce"
    ]
   }
  ],
