--- a/Mojo_jojo.ipynb
+++ b/Mojo_jojo.ipynb
@@ -2,25 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "b2d5defd-91fd-4ba4-a997-7a453682a0ef",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello mojo jojo\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"hello mojo jojo\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "24f5b00e",
    "metadata": {},
    "outputs": [
@@ -33,7 +15,7 @@
     }
    ],
    "source": [
-    "print(\"hello bellota\")"
+    "print(\"hello burbuja\")"
    ]
   },
   {
@@ -41,7 +23,7 @@
    "id": "02ae15d8",
    "metadata": {},
    "source": [
-    "frjcehcercvevcecevce"
+    "frjcehcercvevcecevceAndres me quiero ir a casa"
    ]
   }
  ],
