--- a/Mojo_jojo.ipynb
+++ b/Mojo_jojo.ipynb
@@ -197,38 +197,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "5b464177",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Id                 0\n",
-       "MSSubClass         0\n",
-       "MSZoning           4\n",
-       "LotFrontage      227\n",
-       "LotArea            0\n",
-       "                ... \n",
-       "MiscVal            0\n",
-       "MoSold             0\n",
-       "YrSold             0\n",
-       "SaleType           1\n",
-       "SaleCondition      0\n",
-       "Length: 80, dtype: int64"
+       "Alley           2721.0\n",
+       "BsmtCond          82.0\n",
+       "BsmtExposure      82.0\n",
+       "BsmtFinSF1         1.0\n",
+       "BsmtFinSF2         1.0\n",
+       "BsmtFinType1      79.0\n",
+       "BsmtFinType2      80.0\n",
+       "BsmtFullBath       2.0\n",
+       "BsmtHalfBath       2.0\n",
+       "BsmtQual          81.0\n",
+       "BsmtUnfSF          1.0\n",
+       "Electrical         1.0\n",
+       "Exterior1st        1.0\n",
+       "Exterior2nd        1.0\n",
+       "Fence           2348.0\n",
+       "FireplaceQu     1420.0\n",
+       "Functional         2.0\n",
+       "GarageArea         1.0\n",
+       "GarageCars         1.0\n",
+       "GarageCond       159.0\n",
+       "GarageFinish     159.0\n",
+       "GarageQual       159.0\n",
+       "GarageType       157.0\n",
+       "GarageYrBlt      159.0\n",
+       "KitchenQual        1.0\n",
+       "LotFrontage      486.0\n",
+       "MSZoning           4.0\n",
+       "MasVnrArea        23.0\n",
+       "MasVnrType      1766.0\n",
+       "MiscFeature     2814.0\n",
+       "PoolQC          2909.0\n",
+       "SaleType           1.0\n",
+       "TotalBsmtSF        1.0\n",
+       "Utilities          2.0\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check for the missing values.\n",
-    "train_dataset.isnull().sum(axis=0)\n",
+    "#  Busca valores nulos en training.\n",
+    "train_data_null_values = train_dataset.isnull().sum(axis=0)\n",
     "\n",
-    "# Check for the missing values.\n",
-    "#test_dataset.isnull().sum(axis=0)"
+    "train_null_val = train_data_null_values[train_data_null_values > 0 ]\n",
+    "#print(train_null_val)\n",
+    "\n",
+    "#print(\"-------------\")\n",
+    "#  Busca valores nulos en training.\n",
+    "test_data_null_values = test_dataset.isnull().sum(axis=0)\n",
+    "\n",
+    "test_null_val = test_data_null_values[test_data_null_values > 0 ]\n",
+    "#print(test_null_val)\n",
+    "\n",
+    "total_null_dataset = train_null_val.fillna(0).add(test_null_val.fillna(0), fill_value=0)\n",
+    "total_null_dataset\n",
+    "\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4af6ec3",
+   "metadata": {},
+   "source": [
+    "Se procede a realizar un estudio de las siguientes variables para determinar qué realizar con los valores faltantes. Para ello se procederá a eliminar todas las filas con una tasa de NaN inferior al 1% (es decir, menos de 29 valores nulos)\n",
+    "\n",
+    "https://www.kaggle.com/code/asyaaatru/sale-price-as-detailed-as-possible"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eec312f9",
+   "metadata": {},
+   "source": [
+    "Las columnas con 29 o menos NaN son las siguientes. Se procederá a la eliminación completa de la fila correspondiente al valor faltante: \n",
+    "- BsmtFinSF1         1.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- BsmtFinSF2         1.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- BsmtFullBath       2.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- BsmtHalfBath       2.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- BsmtUnfSF          1.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- Electrical         1.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- Exterior1st        1.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- Exterior2nd        1.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- Functional         2.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- GarageArea         1.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- GarageCars         1.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- KitchenQual        1.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- MSZoning           4.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- MasVnrArea        23.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- SaleType           1.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- TotalBsmtSF        1.0 - Filas eliminadas (Cantidad menor al umbral)\n",
+    "- Utilities          2.0 - Filas eliminadas (Cantidad menor al umbral)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6faf40fa",
+   "metadata": {},
+   "source": [
+    "Una vez filtrados, estudiaremos los datos con NaN restantes uno a uno, decidiendo si eliminar o imputar:\n",
+    "\n",
+    "- Alley           2721.0 - Considerado como \"Cantidad = 0\"\n",
+    "- BsmtCond          82.0 - Considerado como \"Cantidad = 0\"\n",
+    "- BsmtExposure      82.0 - Considerado como \"Cantidad = 0\"\n",
+    "- BsmtFinType1      79.0 - Considerado como \"Cantidad = 0\"\n",
+    "- BsmtFinType2      80.0 - Considerado como \"Cantidad = 0\"\n",
+    "- BsmtQual          81.0 - Considerado como \"Cantidad = 0\"\n",
+    "- Fence           2348.0 - Considerado como \"Cantidad = 0\"\n",
+    "- FireplaceQu     1420.0 - Considerado como \"Cantidad = 0\"\n",
+    "- GarageCond       159.0 - Considerado como \"Cantidad = 0\"\n",
+    "- GarageFinish     159.0 - Considerado como \"Cantidad = 0\"\n",
+    "- GarageQual       159.0 - Considerado como \"Cantidad = 0\"\n",
+    "- GarageType       157.0 - Considerado como \"Cantidad = 0\"\n",
+    "- GarageYrBlt      159.0 - Considerado como \"Cantidad = 0\"\n",
+    "- LotFrontage      486.0 - Valor faltante\n",
+    "- MasVnrType      1766.0 - Valor faltante\n",
+    "- MiscFeature     2814.0 - Considerado como \"Cantidad = 0\"\n",
+    "- PoolQC          2909.0 - Considerado como \"Cantidad = 0\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46ee947d",
+   "metadata": {},
+   "source": [
+    "De las variables con NaN, solo en \"LotFrontage\" y \"MasVnrType\" se han considerado que los NaN hacen referencia a datos vacíos. Se procederán a descartar las columnas por las siguientes razones:\n",
+    " - En \"MasVnrType\" hay más de la mitad de datos faltantes, por lo que descarta.\n",
+    " - En \"LotFrontage\" hay un 16.7% de datos faltantes, por lo que se procedió a analizar su relevancia. Tras un riguroso análisis se consideró poco relevante y se eliminó del modelo final(Fuente: la de los deseos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ed555e4",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e57fc2f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "232     21.0\n",
+       "837     21.0\n",
+       "235     21.0\n",
+       "1029    21.0\n",
+       "1038    21.0\n",
+       "        ... \n",
+       "1429     NaN\n",
+       "1431     NaN\n",
+       "1441     NaN\n",
+       "1443     NaN\n",
+       "1446     NaN\n",
+       "Name: LotFrontage, Length: 1460, dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_dataset.sort_values(by='LotFrontage')[\"LotFrontage\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "918e56cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset[\"LotFrontage\"]"
    ]
   }
  ],
