--- a/Mojo_jojo.ipynb
+++ b/Mojo_jojo.ipynb
@@ -378,7 +378,7 @@
     "- GarageType       157.0 - Considerado como \"Cantidad = 0\"\n",
     "- GarageYrBlt      159.0 - Considerado como \"Cantidad = 0\" --> en test hay dos que no tienen sentido\n",
     "- LotFrontage      486.0 - Valor faltante\n",
-    "- MasVnrType      1766.0 - Valor faltante --> creo que MAL\n",
+    "- MasVnrType      1766.0 - Considerado como \"Cantidad = 0\"\n",
     "- MiscFeature     2814.0 - Considerado como \"Cantidad = 0\"\n",
     "- PoolQC          2909.0 - Considerado como \"Cantidad = 0\""
    ]
@@ -389,7 +389,6 @@
    "metadata": {},
    "source": [
     "De las variables con NaN, solo en \"LotFrontage\" y \"MasVnrType\" se han considerado que los NaN hacen referencia a datos vacíos. Se procederán a descartar las columnas por las siguientes razones:\n",
-    " - En \"MasVnrType\" hay más de la mitad de datos faltantes, por lo que descarta. \n",
     " - En \"LotFrontage\" hay un 16.7% de datos faltantes, por lo que se procedió a analizar su relevancia. Tras un riguroso análisis se consideró poco relevante y se eliminó del modelo final(Fuete: la de los deseos)"
    ]
   },
@@ -719,6 +718,25 @@
    "source": [
     "# ENTRENAMIENTO DE MODELOS"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3394c9fa",
+   "metadata": {},
+   "source": [
+    "#### Versión 1\n",
+    "Se procederá a realizar un modelo usando como datos las variables numéricos para ver el comportamiento inicial del modelo. Los modelos a entrenar son los siguientes:\n",
+    "- Regresión lineal \n",
+    "- Random forest\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fa5286c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
