Añadido Version para andrés

--- a/Mojo_jojo.ipynb
+++ b/Mojo_jojo.ipynb
@@ -724,7 +724,7 @@
    "id": "3394c9fa",
    "metadata": {},
    "source": [
-    "#### Versión 1\n",
+    "#### Versión 1 (JOSE)\n",
     "Se procederá a realizar un modelo usando como datos las variables numéricos para ver el comportamiento inicial del modelo. Los modelos a entrenar son los siguientes:\n",
     "- Regresión lineal \n",
     "- Random forest\n"
@@ -737,6 +737,17 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8fbd222",
+   "metadata": {},
+   "source": [
+    "#### Versión 2 (ANDRES)\n",
+    "Se procederá a realizar un modelo usando como datos las variables numéricos para ver el comportamiento inicial del modelo. Los modelos a entrenar son los siguientes:\n",
+    "- Regresión lineal \n",
+    "- Random forest\n"
+   ]
   },
   {
    "cell_type": "code",
