Regresion lineal funcional (creo)

--- a/Mojo_jojo.ipynb
+++ b/Mojo_jojo.ipynb
@@ -458,7 +458,7 @@
        "Series([], dtype: int64)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,6 +478,7 @@
     "\n",
     "# FALTA ELIMINAR COLUMNAS Y/O IMPUTAR      \n",
     "\n",
+    "#test_dataset = test_dataset.drop(columns=[\"LotFrontage\"])\n",
     "#train_dataset = train_dataset.drop(columns=[\"LotFrontage\"])\n",
     "\n",
     "matriz_train_null = train_dataset.isnull()\n",
@@ -837,25 +838,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 78,
    "id": "5fa5286c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[122130.7389019 ],\n",
-       "       [152945.91631005],\n",
-       "       [174149.50008987],\n",
-       "       ...,\n",
-       "       [178481.56810956],\n",
-       "       [122515.05147462],\n",
-       "       [259666.18771649]])"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1451\n",
+      "34083.44853690971\n"
+     ]
     }
    ],
    "source": [
@@ -865,8 +858,13 @@
     "lr = LinearRegression()\n",
     "\n",
     "lr.fit(X_train_robust, train_dataset[[\"SalePrice\"]])\n",
-    "predY = lr.predict(X_test_robust)\n",
-    "predY"
+    "predY = lr.predict(X_train_robust)\n",
+    "\n",
+    "print(predY.size)\n",
+    "\n",
+    "a= metrics.mean_squared_error(train_dataset[[\"SalePrice\"]], predY)\n",
+    "print(np.sqrt(a))\n",
+    "\n"
    ]
   },
   {
