Random forest hecho

--- a/Mojo_jojo.ipynb
+++ b/Mojo_jojo.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "8e740728",
    "metadata": {},
    "outputs": [],
@@ -74,6 +74,7 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn import metrics, preprocessing\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "#warnings.filterwarnings(action='ignore')                  # Turn off the warnings.\n",
     "%matplotlib inline"
    ]
@@ -513,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "16d408a4",
    "metadata": {},
    "outputs": [
@@ -562,7 +563,7 @@
        " 'MiscVal']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,11 +606,47 @@
    "execution_count": null,
    "id": "178b792d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Random forest con variables numéricas:\u001b[39;00m\n\u001b[0;32m      3\u001b[0m RFC \u001b[38;5;241m=\u001b[39m RandomForestClassifier(n_estimators\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m,max_depth\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m,min_samples_leaf\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m123\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m RFC\u001b[38;5;241m.\u001b[39mfit(X_train,Y_train)\n\u001b[0;32m      5\u001b[0m Y_pred \u001b[38;5;241m=\u001b[39m RFC\u001b[38;5;241m.\u001b[39mpredict(X_test)\n\u001b[0;32m      9\u001b[0m lr \u001b[38;5;241m=\u001b[39m LinearRegression()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "# Random forest con variables numéricas:\n",
+    "\n",
     "RFC = RandomForestClassifier(n_estimators=100,max_depth=5,min_samples_leaf=2,random_state=123)\n",
-    "RFC.fit(X_train,Y_train)\n",
-    "Y_pred = RFC.predict(X_test)"
+    "RFC.fit(X_train_robust, train_dataset[[\"SalePrice\"]])\n",
+    "predY = RFC.predict(X_train_robust)\n",
+    "\n",
+    "\n",
+    "a= metrics.mean_squared_error(train_dataset[[\"SalePrice\"]], predY)\n",
+    "print(np.sqrt(a))\n",
+    "\n",
+    "\n",
+    "# Mostrar features ordenadas\n",
+    "\n",
+    "features = [\n",
+    "    \"MSSubClass\", \"LotArea\", \"OverallQual\", \"OverallCond\", \"YearBuilt\",\n",
+    "    \"YearRemodAdd\", \"MasVnrArea\", \"TotalBsmtSF\",\n",
+    "    \"1stFlrSF\", \"2ndFlrSF\", \"LowQualFinSF\", \"GrLivArea\", \"BsmtFullBath\", \"BsmtHalfBath\",\n",
+    "    \"FullBath\", \"HalfBath\", \"BedroomAbvGr\", \"KitchenAbvGr\", \"TotRmsAbvGrd\", \"Fireplaces\",\n",
+    "    \"GarageYrBlt\", \"GarageCars\", \"GarageArea\", \"WoodDeckSF\", \"OpenPorchSF\", \"EnclosedPorch\",\n",
+    "    \"3SsnPorch\", \"ScreenPorch\", \"PoolArea\", \"MiscVal\", \"MoSold\", \"YrSold\"\n",
+    "]\n",
+    "\n",
+    "coef_dict = dict(zip(features, RFC.coef_.ravel()))\n",
+    "coef_dict = {k: abs(v) for k, v in coef_dict.items()} # Valor absoluto\n",
+    "\n",
+    "sorted_keys = sorted(coef_dict, key=coef_dict.get, reverse=True) # Ordenado de mayor a menor\n",
+    "sorted_keys\n"
    ]
   },
   {
