Otra vez sin guardar...

--- a/Mojo_jojo.ipynb
+++ b/Mojo_jojo.ipynb
@@ -603,28 +603,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "178b792d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Random forest con variables numéricas:\u001b[39;00m\n\u001b[0;32m      3\u001b[0m RFC \u001b[38;5;241m=\u001b[39m RandomForestClassifier(n_estimators\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m,max_depth\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m,min_samples_leaf\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m123\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m RFC\u001b[38;5;241m.\u001b[39mfit(X_train,Y_train)\n\u001b[0;32m      5\u001b[0m Y_pred \u001b[38;5;241m=\u001b[39m RFC\u001b[38;5;241m.\u001b[39mpredict(X_test)\n\u001b[0;32m      9\u001b[0m lr \u001b[38;5;241m=\u001b[39m LinearRegression()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\josec\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:1473: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  return fit_method(estimator, *args, **kwargs)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25544.889385338698\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['OverallQual',\n",
+       " 'GrLivArea',\n",
+       " 'TotalBsmtSF',\n",
+       " '2ndFlrSF',\n",
+       " 'GarageCars',\n",
+       " '1stFlrSF',\n",
+       " 'GarageArea',\n",
+       " 'LotArea',\n",
+       " 'TotRmsAbvGrd',\n",
+       " 'FullBath',\n",
+       " 'YearBuilt',\n",
+       " 'GarageYrBlt',\n",
+       " 'YearRemodAdd',\n",
+       " 'MasVnrArea',\n",
+       " 'Fireplaces',\n",
+       " 'WoodDeckSF',\n",
+       " 'BsmtFullBath',\n",
+       " 'OpenPorchSF',\n",
+       " 'KitchenAbvGr',\n",
+       " 'OverallCond',\n",
+       " 'BedroomAbvGr',\n",
+       " 'MoSold',\n",
+       " 'MSSubClass',\n",
+       " 'HalfBath',\n",
+       " 'ScreenPorch',\n",
+       " 'YrSold',\n",
+       " '3SsnPorch',\n",
+       " 'EnclosedPorch',\n",
+       " 'LowQualFinSF',\n",
+       " 'BsmtHalfBath',\n",
+       " 'PoolArea',\n",
+       " 'MiscVal']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Random forest con variables numéricas:\n",
     "\n",
-    "RFC = RandomForestClassifier(n_estimators=100,max_depth=5,min_samples_leaf=2,random_state=123)\n",
-    "RFC.fit(X_train_robust, train_dataset[[\"SalePrice\"]])\n",
-    "predY = RFC.predict(X_train_robust)\n",
+    "RFR = RandomForestRegressor(n_estimators=100,max_depth=5,min_samples_leaf=2,random_state=123)\n",
+    "RFR.fit(X_train_robust, train_dataset[[\"SalePrice\"]])\n",
+    "predY = RFR.predict(X_train_robust)\n",
     "\n",
     "\n",
     "a= metrics.mean_squared_error(train_dataset[[\"SalePrice\"]], predY)\n",
@@ -632,7 +677,6 @@
     "\n",
     "\n",
     "# Mostrar features ordenadas\n",
-    "\n",
     "features = [\n",
     "    \"MSSubClass\", \"LotArea\", \"OverallQual\", \"OverallCond\", \"YearBuilt\",\n",
     "    \"YearRemodAdd\", \"MasVnrArea\", \"TotalBsmtSF\",\n",
@@ -642,7 +686,7 @@
     "    \"3SsnPorch\", \"ScreenPorch\", \"PoolArea\", \"MiscVal\", \"MoSold\", \"YrSold\"\n",
     "]\n",
     "\n",
-    "coef_dict = dict(zip(features, RFC.coef_.ravel()))\n",
+    "coef_dict = dict(zip(features, RFR.feature_importances_))\n",
     "coef_dict = {k: abs(v) for k, v in coef_dict.items()} # Valor absoluto\n",
     "\n",
     "sorted_keys = sorted(coef_dict, key=coef_dict.get, reverse=True) # Ordenado de mayor a menor\n",
@@ -654,7 +698,7 @@
    "id": "0ee40d10",
    "metadata": {},
    "source": [
-    "#### 1.3 Outliers\n"
+    "## 4. Outliers\n"
    ]
   },
   {
