Cramer de verdad...

--- a/Mojo_jojo.ipynb
+++ b/Mojo_jojo.ipynb
@@ -2547,6 +2547,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "29d006db",
+   "metadata": {},
+   "source": [
+    "Tras percatarnos de la fuerte relación entre las variables \"Exterior1st\" y \"Exterior2nd\" y \"Condition1\" y \"Condition2\", se va a roceder a su estudio. Tras revisar que ambos hacen referencia a las mismas carácterísticas, se ha optado por unirlos cuando se aplique OneHotEncoding, reduciendo así la cantidad de variables a usar y evitando información duplicada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "46a74a04",
    "metadata": {},
    "source": [
